# enscript

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.guess  config.rpath  configure.ac  configure.in
afm/: ChangeLog  Makefile.am  Makefile.in
afmlib/: Makefile-encodings  Makefile.am  Makefile.in  afm.c  afm.h  afmint.h  afmparse.c  afmtest.c  deffont.c  e_88591.c  e_885910.c  e_88592.c  e_88593.c  e_88594.c  e_88595.c  e_88597.c  e_88599.c  e_hp8.c  e_koi8.c  e_mac.c  e_pc.c  e_vms.c  make-encoding.pl  strhash.c  strhash.h
compat/: Makefile.am  Makefile.in  regex.c  xalloc.c
docs/: ChangeLog  Makefile.am  Makefile.in  enscript.man  enscript.texi  states.man  texinfo.tex
intl/: ChangeLog  Makefile.in  bindtextdom.c  config.charset  dcigettext.c  dcngettext.c  dngettext.c  gettextP.h  intl-compat.c  libgnuintl.h  loadmsgcat.c  localcharset.c  ngettext.c
lib/: 88591.enc  885910.enc  88592.enc  88593.enc  88594.enc  88595.enc  88597.enc  88599.enc  ChangeLog  Makefile-encodings  Makefile.am  Makefile.in  a2ps.hdr  ascii.enc  asciidkno.enc  asciifise.enc  edd.hdr  emacs.hdr  enscript-color.hdr  enscript.cfg.in  enscript.hdr  enscript.pro  frame.hdr  hp8.enc  ibmpc.enc  koi8.enc  mac.enc  make-encoding.pl  mp.hdr  ps.enc  pslatin1.enc  simple.hdr  squeeze.hdr  vms.enc
m4/: ChangeLog
po/: ChangeLog  ca.po  da.po  de.po  en_GB.po  es.po  fi.po  fr.po  ga.po  hr.po  id.po  nl.po  pl.po  pt_BR.po  ro.po  sv.po  tr.po  uk.po  vi.po
scripts/: Makefile.am  Makefile.in  diffpp.1  diffpp.in  sliceprint.1  sliceprint.in
src/: ChangeLog  Makefile.am  Makefile.in  gsint.h  main.c  mkafmmap.c  prt_dos.c  prt_lpr.c  psgen.c  util.c
src/tests/: Makefile.am  Makefile.in  passthrough.test
states/: ChangeLog  Makefile.am  Makefile.in  defs.h  enscript.el  gram.c  gram.y  lex.c  lex.l  main.c  prims.c  process.c  utils.c
states/hl/: ChangeLog  Makefile.am  Makefile.in  c_ppline.st  cpp.st  enscript.st  perl.st  sh.st
states/tests/: Makefile.am  Makefile.in  tests.st
w32/: Makefile.am  Makefile.in  dummypwd.h  gethostname.c  getpwd.c  getuid.c
